# cache_test

./: .gitignore  CMakeLists.txt  README.md
cfg/: config.json
data/: test_ls.rws  test_sort.rws
scripts/: run_all.sh  run_fifo.sh  run_lfu.sh  run_lru.sh
src/: cache_base.cpp  cache_base.h  cache_entry_base.cpp  cache_entry_base.h  constants.h  cpu.cpp  cpu.h  fifo_cache.cpp  fifo_cache.h  fifo_cache_entry.cpp  fifo_cache_entry.h  lfu_cache.cpp  lfu_cache.h  lfu_cache_entry.cpp  lfu_cache_entry.h  lru_cache.cpp  lru_cache.h  lru_cache_entry.cpp  lru_cache_entry.h  main.cpp  settings.cpp  settings.h  statistics.cpp  statistics.h
